--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=1200, initial-scale=1.0">
+    <meta name="viewport" content="width=1200, user-scalable=no">
     <title>Bangladesh Educational Statistics Map</title>
     
     <!-- Leaflet CSS -->
